# statbrainz_py

./: .cc-manager.json  .gitignore  PORTING.md  PORTING_ISSUES.md  README.md  conversation-log.json  pyproject.toml
.claude/: settings.local.json
.venv-linux/: pyvenv.cfg
Tutorials/: confidence_regions_tutorial.ipynb
statbrainz/: __init__.py  _helpers.py
statbrainz/Atlases/: atlas_masks.py  getregion.py
statbrainz/Brain_Functions/: __init__.py  gen_mask.py  getMNImask.py  mvtstat_dep.py  nifti_type.py  plane2index.py  sigma2FWHM.py  unwrap.py  vec_data.py  voxinMNI.py
statbrainz/ImageViewing/: __init__.py  _display_helpers.py  colorRegion.py  combine_brains.py  imgload.py  imgsave.py  overlay_brain.py  peak2circle.py  viewbrain.py  viewdata.py  viewthresh.py
statbrainz/Statistics_Functions/: __init__.py  apower.py  asinh_data_trans.py  asinh_trans.py  convind.py  convindall.py  gen_noise.py
statbrainz/Surface/: graph_cc.py  resample_srf.py  resample_srf_nn.py  smooth_surface.py  srf_dilate_mask.py  srf_fwhm2niters.py
statbrainz/atlases/: __init__.py  _shared.py  atlases.py  getBrainRegionNames.py  get_mask.py
statbrainz/brain/: __init__.py  conversions.py  io.py  (+2 more)
tests/: test_loadmask.py  test_loadsrf.py  test_statistics_wave1.py  test_wave1_brain_inference.py  test_wave1_extras.py  test_wave2.py  test_wave2_brain.py  test_wave2_inference.py  test_wave3_copesets.py  test_wave3_mht.py  test_wave3_resampling.py  test_wave3_tfce_tdp.py  test_wave4_spintest.py  test_wave4_surface.py  test_wave5_viewing.py  test_wave_atlases.py  test_wave_cluster_perm.py
(+158 files in other folders)
