[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "statbrainz"
version = "0.0.1"
description = "Python port of the StatBrainz package: statistical inference and visualization of brain imaging data."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "See LICENSE" }
authors = [{ name = "Samuel Davenport" }]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "nibabel>=5.0",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.6", "nilearn>=0.10"]
test = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["statbrainz"]

[tool.hatch.build.targets.wheel.force-include]
"statbrainz/data" = "statbrainz/data"

[tool.pytest.ini_options]
testpaths = ["tests"]
